--- a/pages/producto.html
+++ b/pages/producto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header>
-     <img src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
+     <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
         <nav id="home">
             <ul>
                 <li> <a href="../index.html">Home</a></li>
