--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
+        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
         <nav id="home">
             <ul>
@@ -33,10 +33,7 @@
                         </p>
                     </div>
            </div> 
-        <div class="project_title">           
-            <h3>Construcciones</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis animi aliquam odio dolorum amet explicabo tenetur rerum tempora modi corporis.</p>
-        </div>    
+         
     </section>
 <footer>
     <ul>
