--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,24 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
-           <nav id="home">
-               <ul>
-                   <li> <a href="../index.html">Home</a></li>
-                   <li> <a href="producto.html">Productos</a></li>
-                   <li> <a href="proyecto.html">Proyectos</a></li>
-                   <li> <a href="asesoria.html">Asesoría</a></li>
-                   <li> <a href="contacto.html">Contacto</a></li>
-                   <li> <a href="sobreNosotros.html"> Sobre Nosotros</a></li>
-               </ul>
-           </nav>
-     </header>
+ <!--  <header>
+        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
+
+        <nav id="home">
+            <ul>
+                <li> <a href="../index.html">Home</a></li>
+                <li> <a href="producto.html">Productos</a></li>
+                <li> <a href="proyecto.html">Proyectos</a></li>
+                <li> <a href="asesoria.html">Asesoría</a></li>
+                <li> <a href="contacto.html">Contacto</a></li>
+                <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
+        </nav>
+    </header>     -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+        <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa-solid fa-bars"> </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="producto.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="proyecto.html">PROYECTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="asesoria.html">ASESORIA</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
     <section class="contacto">
-        <h1> Nuestras Redes y Conctactos</h1>
+        <h1> Nuestras redes y conctactos</h1>
         <ul>
             <li>Instagram</li>
             <li>Whatsapp</li>
@@ -36,6 +70,9 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/sobreNosotros.html"> Sobre Nosotros</a></li>
     </ul>
-</footer>    
+</footer> 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
