--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <header>
+<!--     <header>
         <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
         <nav id="home">
@@ -21,19 +23,85 @@
                 <li> <a href="contacto.html">Contacto</a></li>
                 <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
         </nav>
-    </header>    
+    </header>     -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+        <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa-solid fa-bars"> </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="producto.html">PRODUCTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="proyecto.html">PROYECTOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="asesoria.html">ASESORIA</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sobreNosotros.html">SOBRE NOSOTROS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
     <section class="proyectos">
         <h1>PROYECTOS </h1>
            <div class="project_title"> 
                 <h3> Deshidratadores </h3>
-                    <div class="container_deshidratador">
-                        <img src="../images/deshidratadorsolarsl.jpg" alt="deshidratador" width="250px">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, ut exercitationem quisquam illo possimus quia consectetur quod nihil pariatur cupiditate?
-                        </p>
-                    </div>
-           </div> 
+          
          
+
+           <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador">
+                <div class="carousel-caption d-none d-md-block container-carousel-proyec">
+                  <h5>DESHIDRATADOR 1</h5>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, quae.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100  des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador" width="250px">
+                <div class="carousel-caption d-none d-md-block container-carousel-proyec">
+                  <h5>DESHIDRATADOR 2</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam?</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador" width="250px">
+                <div class="carousel-caption d-none d-md-block container-carousel-proyec">
+                  <h5>DESHIDRATADOR 3</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, nostrum.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
     </section>
 <footer>
     <ul>
@@ -43,6 +111,7 @@
     </ul>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
