--- a/pages/asesoria.html
+++ b/pages/asesoria.html
@@ -58,8 +58,9 @@
     <section class="asesoria">
     <h1>Asesoría</h1>
     <div class="ases-cont">
-        <h2> Brindamos asesoria para el cultivo integral</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt quaerat ab sapiente laborum eveniet reprehenderit neque aut pariatur aperiam porro rerum, similique, minima ducimus temporibus eos alias numquam cupiditate provident?</p>
+            <h2> Brindamos asesoria para el cultivo integral</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt quaerat ab sapiente laborum eveniet reprehenderit neque aut pariatur aperiam porro rerum, similique, minima ducimus temporibus eos alias numquam cupiditate provident?</p>
+        </div>    
     </div>
     </section>    
 
