--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,6 +64,29 @@
         </ul>
     </section>
 
+    <div class="container-contacto">
+            
+            <form class="row g-2">
+                <div class="mb-3 col-md-7">
+                    <label for="validationDefault01" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="validationDefault01" placeholder="Nombre">
+                </div>
+                <div class="mb-3 col-md-7">   
+                    <label for="validationDefault02" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="validationDefault02" placeholder="Apellido">
+                </div>    
+           </form>  
+            <form class="row g-2">
+                <div class="mb-3 col-md-8">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                </div>
+            </form>    
+    </div>         
 <footer>
     <ul>
         <li><a href="../pages/contacto.html"> Contacto</a></li>
