--- a/pages/asesoria.html
+++ b/pages/asesoria.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asesoría</title>
+    <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos-copia.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1> 
   <!--  <header>
         <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
@@ -65,7 +67,7 @@
       </nav>
 
     <section class="asesoria">
-    <h1>Asesoría</h1>
+    <h2>Asesoría</h2>
     <div class="ases-cont">
             <h2> Brindamos asesoria para el cultivo integral</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt quaerat ab sapiente laborum eveniet reprehenderit neque aut pariatur aperiam porro rerum, similique, minima ducimus temporibus eos alias numquam cupiditate provident?</p>
