--- a/pages/producto.html
+++ b/pages/producto.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1>
  <!--  <header>
         <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
@@ -66,7 +68,7 @@
     </nav>
     
     <section class="productos-page">
-        <h1> PRODUCTOS </h1>
+        <h2> PRODUCTOS </h2>
         <section class="producto_full_page">
           <!--   
                 <div class="page-prod">
