--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros</title>
+    <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos-copia.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
+    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1>
      <!--  <header>
         <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
@@ -65,7 +66,7 @@
         
       </nav>
     <section class="sobre-nosotros">
-    <h1>Ser Biosfera</h1>
+    <h2>Ser Biosfera</h2>
 
          <div class="texto_container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aliquid ratione nisi autem ab, magnam neque atque commodi perferendis aperiam, obcaecati iste fugiat sed vel porro sit quae cumque molestias ipsa. Dolor minus eveniet esse tempore amet nobis cum ad. Accusantium ullam assumenda dicta excepturi est, impedit maxime? Labore, corrupti.</p>
