--- a/pages/asesoria.html
+++ b/pages/asesoria.html
@@ -6,25 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos-copia.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1> 
-  <!--  <header>
-        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
-
-        <nav id="home">
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="producto.html">Productos</a></li>
-                <li> <a href="proyecto.html">Proyectos</a></li>
-                <li> <a href="asesoria.html">Asesoría</a></li>
-                <li> <a href="contacto.html">Contacto</a></li>
-                <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
-        </nav>
-    </header>     -->
     <header> 
       <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
     </header>
@@ -66,13 +52,23 @@
         
       </nav>
 
-    <section class="asesoria">
-    <h2>Asesoría</h2>
-    <div class="ases-cont">
-            <h2> Brindamos asesoria para el cultivo integral</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt quaerat ab sapiente laborum eveniet reprehenderit neque aut pariatur aperiam porro rerum, similique, minima ducimus temporibus eos alias numquam cupiditate provident?</p>
-        </div>    
-    </div>
+    <section class="asesoria-container">
+            <h2>ASESORÍA</h2>
+            <div class="ases-info">
+                <div class="cultivo">
+                    <h3> Cultivo integral</h3>
+                    <p>Abarcamos todos los puntos para un cultivo optimo, totalmente saludable y organico.</p>
+                </div>
+                <div class="construccion">
+                    <h3> Construccion </h3>
+                    <p>Brindamos nuestros conocimientos para el asesoramiento en construccion de invernaderos</p>
+                </div> 
+                <div class="consumo">
+                    <h3> Consumo Consciente</h3>
+                    <p>Consideramos nuestra tarea mas importante, crear consciencia para un consumo saludable. Brindando herramientas e información.</p>
+                </div>    
+            </div>
+
     </section>    
 
 <footer>
