--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,25 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos-copia.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1>
- <!--  <header>
-        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
-
-        <nav id="home">
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="producto.html">Productos</a></li>
-                <li> <a href="proyecto.html">Proyectos</a></li>
-                <li> <a href="asesoria.html">Asesoría</a></li>
-                <li> <a href="contacto.html">Contacto</a></li>
-                <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
-        </nav>
-    </header>     -->
 
     <header> 
       <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
@@ -71,35 +56,37 @@
     <section class="contacto">
         <h2> Nuestras redes y conctactos</h2>
         <ul>
-            <li>Instagram</li>
-            <li>Whatsapp</li>
-            <li>E-mail: serbiosfera@gmail.com</li>
+            <li><i class="fa-brands fa-instagram icono-style"></i></li>
+            <li><i class="fa-brands fa-whatsapp icono-style"></i></li>
+            <li><i class="fa-regular fa-envelope icono-style"></i></li>
         </ul>
-    </section>
+        <hr class="linea-style">
 
-    <div class="container-contacto">
-            
-            <form class="row g-2">
-                <div class="mb-3 col-md-7">
-                    <label for="validationDefault01" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="validationDefault01" placeholder="Nombre">
-                </div>
-                <div class="mb-3 col-md-7">   
-                    <label for="validationDefault02" class="form-label">Apellido</label>
-                    <input type="text" class="form-control" id="validationDefault02" placeholder="Apellido">
-                </div>    
-           </form>  
-            <form class="row g-2">
-                <div class="mb-3 col-md-8">
-                    <label for="exampleFormControlInput1" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-                </div>
-            </form>    
-    </div>         
+        <div class="container-contacto">
+                
+                <form class="row g-2">
+                    <div class="mb-3 col-md-7">
+                        <label for="validationDefault01" class="form-label estilo">Nombre</label>
+                        <input type="text" class="form-control" id="validationDefault01" placeholder="Nombre">
+                    </div>
+                    <div class="mb-3 col-md-7">   
+                        <label for="validationDefault02" class="form-label estilo">Apellido</label>
+                        <input type="text" class="form-control" id="validationDefault02" placeholder="Apellido">
+                    </div>    
+            </form>  
+                <form class="row g-2">
+                    <div class="mb-3 col-md-8">
+                        <label for="exampleFormControlInput1" class="form-label estilo">Email</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label estilo">Mensaje</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                    </div>
+                </form>
+                <button class="btn-enviar-formu"> Enviar </button>   
+        </div>
+  </section>          
 <footer>
     <ul>
         <li><a href="../pages/contacto.html"> Contacto</a></li>
