--- a/pages/proyecto.html
+++ b/pages/proyecto.html
@@ -6,25 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos-copia.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1>
-<!--     <header>
-        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
-
-        <nav id="home">
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="producto.html">Productos</a></li>
-                <li> <a href="proyecto.html">Proyectos</a></li>
-                <li> <a href="asesoria.html">Asesoría</a></li>
-                <li> <a href="contacto.html">Contacto</a></li>
-                <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
-        </nav>
-    </header>     -->
     <header> 
       <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
     </header>
@@ -84,21 +70,21 @@
                 <img class="d-block w-100 des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador">
                 <div class="carousel-caption d-none d-md-block container-carousel-proyec">
                   <h5>DESHIDRATADOR 1</h5>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, quae.</p>
+                  <p>Ideal para cultivos grandes</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100  des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador" width="250px">
                 <div class="carousel-caption d-none d-md-block container-carousel-proyec">
                   <h5>DESHIDRATADOR 2</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quibusdam?</p>
+                  <p>Ideal para cultivos medianos</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100 des-img" src="../images/deshidratadorsolarsl.jpg" alt="deshidratador" width="250px">
                 <div class="carousel-caption d-none d-md-block container-carousel-proyec">
                   <h5>DESHIDRATADOR 3</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, nostrum.</p>
+                  <p>Ideal para cultivos pequeños y propios, facilidad para guardar y transportar</p>
                 </div>
               </div>
             </div>
