--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -6,25 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ser Biosfera | Sitio dedicado al servicio agricola orgánico. </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos-copia.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/c0128b6e10.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-    <h1> Crear vida bajo la tierra, reflejar salud sobre ella.</h1>
-     <!--  <header>
-        <img class="logo"  src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;" >
 
-        <nav id="home">
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="producto.html">Productos</a></li>
-                <li> <a href="proyecto.html">Proyectos</a></li>
-                <li> <a href="asesoria.html">Asesoría</a></li>
-                <li> <a href="contacto.html">Contacto</a></li>
-                <li> <a href="sobreNosotros"> Sobre Nosotros</a></li>
-        </nav>
-    </header>     -->
     <header> 
       <img class="logo" src="../images/Logo-web-500x250.png" alt="SerBiosfera Logo" width="250px;">
     </header>
@@ -69,7 +56,9 @@
     <h2>Ser Biosfera</h2>
 
          <div class="texto_container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aliquid ratione nisi autem ab, magnam neque atque commodi perferendis aperiam, obcaecati iste fugiat sed vel porro sit quae cumque molestias ipsa. Dolor minus eveniet esse tempore amet nobis cum ad. Accusantium ullam assumenda dicta excepturi est, impedit maxime? Labore, corrupti.</p>
+            <p>Nos enfocamos en el cultivo consciente, organico y natural. Desde la venta de productos, pasando por la produccion de deshidradtores y el asesoriamiento en distintas areas, destinadas al cultivo.
+                Vida y prosperidad para el alimento y la salud.
+            </p>
         </div>
 </section>
 <footer>
